--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@wordpress/dom-ready": "^3.3.0",
 		"@wordpress/i18n": "^4.2.4",
 		"aphrodite": "^2.4.0",
+		"axios": "^0.25.0",
 		"classnames": "^2.3.1",
 		"color": "^4.2.0",
 		"react-currency-input-field": "^3.6.4"
