--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"axios": "^0.25.0",
 		"classnames": "^2.3.1",
 		"color": "^4.2.0",
+		"lottie-web": "^5.8.1",
 		"react-currency-input-field": "^3.6.4"
 	},
 	"devDependencies": {
