--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
 		"classnames": "^2.3.1",
 		"color": "^4.2.0",
 		"lottie-web": "^5.8.1",
-		"react-currency-input-field": "^3.6.4"
+		"react-currency-input-field": "^3.6.4",
+		"react-page-visibility": "^6.4.0"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^6.2.1",
