Readme updates and set type to "wordpress-plugin" for WPackagist

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "givewp/donation-block-for-stripe",
-    "type": "project",
+    "type": "wordpress-plugin",
     "authors": [
         {
             "name": "Jason Adams",
