--- a/composer.json
+++ b/composer.json
@@ -69,7 +69,7 @@
                 ]
             },
             "namespace_replacement_patterns": {},
-            "delete_vendor_files": false
+            "delete_vendor_files": true
         }
     }
 }
