Update release.yml to change plugin_slug to wp_org_slug

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,8 +8,9 @@ jobs:
     build:
         uses: impress-org/givewp-github-actions/.github/workflows/wp-org-release.yml@master
         with:
-            plugin_slug: donation-block-for-stripe-by-givewp
+            wp_org_slug: donation-block-for-stripe-by-givewp
             zip_name: donation-block-for-stripe-by-givewp
+            text_domain: donation-form-block
         secrets:
             SVN_USERNAME: ${{ secrets.SVN_USERNAME }}
             SVN_PASSWORD: ${{ secrets.SVN_PASSWORD }}
